--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template one "leon"</title>
     <!-- main css file-->
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="https://esraatalnagar.github.io/LionWebsite/css/style.css">
     <!--render all elments normally-->
-    <link rel="stylesheet" href="\css\normalize.css">
+    <link rel="stylesheet" href="https://esraatalnagar.github.io/LionWebsite/css/normalize.css">
     <!--font awesome library-->
-    <link rel="stylesheet" href="\css\all.min.css">
+    <link rel="stylesheet" href="https://esraatalnagar.github.io/LionWebsite/css/all.min.css">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 <!--start header-->
 <div class="header">
 <div class="container">
-    <img class="logo" src="\images\logo.png" alt="">
+    <img class="logo" src="https://esraatalnagar.github.io/LionWebsite/images/logo.png" alt="">
     <div class="links">
         <span class="icon">
             <span></span>
@@ -106,7 +106,7 @@
             </div>
             <div class="col">
                 <div class="image">
-                    <img src="\images\vertical-shot-snowy-mountain-with-clear-sky.jpg" alt="image">
+                    <img src="https://esraatalnagar.github.io/LionWebsite/images/vertical-shot-snowy-mountain-with-clear-sky.jpg" alt="image">
                 </div>
             </div>
         </div>
@@ -120,21 +120,21 @@
         <p>if you do it right, you will last forever</p>
         <div class="portfolio_content">
             <div class="card">
-                <img src="\images\3123473.jpg" alt="">
+                <img src="https://esraatalnagar.github.io/LionWebsite/images/3123473.jpg" alt="">
                 <div class="info">
                     <h3>Project here</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, tempore corporis eaque, architecto.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="\images\4401280.jpg" alt="">
+                <img src="https://esraatalnagar.github.io/LionWebsite/images/4401280.jpg" alt="">
                 <div class="info">
                     <h3>Project here</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, tempore corporis eaque, architecto.</p>
                 </div>
             </div>
                 <div class="card">
-                    <img src="\images\4564431.jpg" alt="">
+                    <img src="https://esraatalnagar.github.io/LionWebsite/images/4564431.jpg" alt="">
                     <div class="info">
                         <h3>Project here</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, tempore corporis eaque, architecto.</p>
@@ -151,7 +151,7 @@
         <p>Less is more work</p>
         <div class="About-content">
             <div class="image">
-                <img src="images\vertical-shot-snowy-mountain-with-clear-sky.jpg" alt="">
+                <img src="https://esraatalnagar.github.io/LionWebsite/images/vertical-shot-snowy-mountain-with-clear-sky.jpg" alt="">
             </div>
             <div class="text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel aliquam eveniet expedita hic sed voluptas eaque officia ipsam quam dolorem! Necessitatibus laboriosam excepturi deleniti accusamus aspernatur maxime optio eveniet magnam?</p>
